--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -98,6 +98,12 @@
                       <p>Please share your thoughts with us!</p>
                       <div class="row">
                         <input type="hidden" name="post" value="{{post.id}}">
+
+                        {% if request.user.is_authenticated %}
+                        <input type="hidden"  name="name" value="{{ request.user.username }}">
+                        <input type="hidden"  name="email" value="{{ request.user.email }}">
+
+                        {% else %}
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group form-row">
                           <input type="text" class="normal" id="name" placeholder="Name" name="name">
                         </div>
@@ -107,6 +113,8 @@
                           <input type="email" class="normal" id="email" placeholder="Email Address" name="email">
                         </div>
                       </div>
+
+                        {% endif %}
                       <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group form-row">
                           <textarea name="comment" placeholder="Comments" rows="4" class="normal"></textarea>
