Add next/previous post
- add next post and previous post in blog_single
- edit index html to delete the request info part

--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -7,7 +7,7 @@
     
     <!--Header form -->
     <div class="container form-header">
-      <div class="form-container">
+      <!-- <div class="form-container">
         <h2>Become a member<span>Get instant access to 4500 video courses</span></h2>
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-row">
@@ -29,7 +29,7 @@
             <input type="button" class="button" value="Request Information">
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <!--/Header form --> 
     
