--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -62,6 +62,25 @@
                 </div>
               </div>
 
+              <div class="post_nav mt-4">
+                <div class="row">
+                  <div class="col-md-6 text-center">
+                    {% if previous_post %}
+                    <a href="{% url 'blog:blog_single' pid=previous_post.id %}" class="btn btn-success">
+                      <i class="fa fa-arrow-left"></i> Previous Post
+                    </a>
+                    {% endif %}
+                  </div>
+                  <div class="col-md-6 text-center">
+                    {% if next_post %}
+                    <a href="{% url 'blog:blog_single' pid=next_post.id %}" class="btn btn-success">
+                      Next Post <i class="fa fa-arrow-right"></i>
+                    </a>
+                    {% endif %}
+                  </div>
+                </div>
+              </div>
+              
               
               <section id="comments">
                 <h6 class="section-title">{{comments|length}} Comments</h6>
