--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -66,14 +66,14 @@
                 <div class="row">
                   <div class="col-md-6 text-center">
                     {% if previous_post %}
-                    <a href="{% url 'blog:blog_single' pid=previous_post.id %}" class="btn btn-success">
+                    <a href="{% url 'blog:blog_single' pid=previous_post.id %}" class="btn btn-warning">
                       <i class="fa fa-arrow-left"></i> Previous Post
                     </a>
                     {% endif %}
                   </div>
                   <div class="col-md-6 text-center">
                     {% if next_post %}
-                    <a href="{% url 'blog:blog_single' pid=next_post.id %}" class="btn btn-success">
+                    <a href="{% url 'blog:blog_single' pid=next_post.id %}" class="btn btn-warning">
                       Next Post <i class="fa fa-arrow-right"></i>
                     </a>
                     {% endif %}
