--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    {% include 'messages.html' %}
     <section class="ftco-section">
         <div class="container">
             <div class="row justify-content-center">
@@ -48,7 +49,7 @@
                                     </label>
                                 </div>
                                 <div class="w-50 text-md-right">
-                                    <a href="#">Forgot Password</a>
+                                    <a href="{% url 'auth_app:password_reset' %}">Forgot Password</a>
                                 </div>
                             </div>
                         </form>
