--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    {% include 'messages.html' %}
     <section class="ftco-section">
         <div class="container">
             <div class="row justify-content-center">
@@ -31,6 +32,9 @@
                             {% csrf_token %}
                             <div class="form-group">
                                 <input type="text" name="username" class="form-control rounded-left" placeholder="Username" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="email" class="form-control rounded-left" placeholder="Email" required>
                             </div>
                             <div class="form-group d-flex">
                                 <input type="password" name="password1" class="form-control rounded-left" placeholder="Password"
