Edit a bit before deployment
- edit all the necessary stuff before deployment process
- fix author url

--- a/templates/base_blog.html
+++ b/templates/base_blog.html
@@ -67,11 +67,11 @@
                     <div class="navbar-collapse collapse">
                       <ul class="nav navbar-nav" id="navigation">
                         <li class="menuItem" id="home"><a href="{% url 'website:index_view' %}">Home</a></li>
-                        <li class="menuItem"><a href="./#features">features</a></li>
-                        <li class="menuItem"><a href="./#courses">courses</a></li>
-                        <li class="menuItem"><a href="./#teachers">teachers</a></li>
-                        <li class="menuItem"><a href="./#pricing">pricing</a></li>
-                        <li class="menuItem"><a href="./#testimonial">Testimonial</a></li>
+                        <li class="menuItem"><a href="{% url 'website:index_view' %}">features</a></li>
+                        <li class="menuItem"><a href="{% url 'website:index_view' %}">courses</a></li>
+                        <li class="menuItem"><a href="{% url 'website:index_view' %}">teachers</a></li>
+                        <li class="menuItem"><a href="{% url 'website:index_view' %}">pricing</a></li>
+                        <li class="menuItem"><a href="{% url 'website:index_view' %}">Testimonial</a></li>
                         <li><a href="{% url 'blog:blog_view' %}">blog</a></li>
                         <li class="menuItem"><a href="{% url 'website:contact_view' %}">Contact</a></li>
                       </ul>
